# hf_download_extension

./: .env.example  .gitignore  CLAUDE.md  README.md  background.js  content.js  create_icons.html  create_icons.py  install_server.sh  manifest.json  popup.html  popup.js  pyproject.toml  server.py  server_example.py  test_server.py
