[project]
name = "huggingface-download-extension"
version = "0.1.0"
description = "HuggingFace Model Downloader Chrome Extension Server"
authors = [
    {name = "jinyoung", email = "jinyoung@example.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "huggingface-hub>=0.20.0",
]
requires-python = ">=3.8"
readme = "CLAUDE.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pillow>=10.0.0",
]
